--- a/src/ShopBundle/Resources/views/snippets-cms/TCMSFieldShopVariantDetails/main-product.html.twig
+++ b/src/ShopBundle/Resources/views/snippets-cms/TCMSFieldShopVariantDetails/main-product.html.twig
@@ -1,5 +1,5 @@
 <div class="TCMSFieldShopVariantDetails">
-    <div class="main-product">
+    <div class="main-product col-form-label">
         <p>
         {{ 'chameleon_system_shop.variants.msg_current_product_is_no_variant'|trans }}
         </p>
