--- a/src/EcommerceStatsBundle/Resources/views/snippets-cms/ecommerceStats/module/html-barchart.html.twig
+++ b/src/EcommerceStatsBundle/Resources/views/snippets-cms/ecommerceStats/module/html-barchart.html.twig
@@ -1,3 +1,11 @@
+{#
+    @var int level
+    @var ChameleonSystem\EcommerceStatsBundle\Service\EcommerceStatsGroup[] blocks
+    @var string[] columnNames
+    @var bool showDiffColumn
+    @var int maxGroupCount
+#}
+
 <div class="TCMSGroupedStatistics">
     <div class="html-barchart">
         {% for block in blocks %}
