ref #636: Prefix format_number filter

--- a/src/EcommerceStatsBundle/Resources/views/snippets-cms/ecommerceStats/module/barchart-body.html.twig
+++ b/src/EcommerceStatsBundle/Resources/views/snippets-cms/ecommerceStats/module/barchart-body.html.twig
@@ -116,7 +116,7 @@
 
             <div class="cleardiv"></div>
 
-            {{ newVal | format_number(2) }}
+            {{ newVal | chameleon_system_ecommerce_stats_format_number(2) }}
         </div>
 
         {% set oldVal = newVal %}
