ref #636: Use bootstrap styles for table

--- a/src/EcommerceStatsBundle/Resources/views/snippets-cms/ecommerceStats/module/barchart-body.html.twig
+++ b/src/EcommerceStatsBundle/Resources/views/snippets-cms/ecommerceStats/module/barchart-body.html.twig
@@ -88,7 +88,7 @@
                         {% set barHTML = barHTML | merge({(subGroupColumn): (barHTML[subGroupColumn] ?: {}) | merge(subBarData) }) %}
 
                         {% set color = colors[colorCount] %}
-                        {% set colorSubcategory = colorSubcategory | merge( {(subGroupColumn): (colorSubcategory[subGroupColumn] ?: {}) | merge({(color): subGroup.groupName}) }) %}
+                        {% set colorSubcategory = colorSubcategory | merge( {(subGroupColumn): (colorSubcategory[subGroupColumn] ?: {}) | merge({(color): subGroup.groupTitle}) }) %}
 
                         {% set colorCount = colorCount + 1 %}
                     {% endfor %}
