--- a/src/EcommerceStatsBundle/Resources/views/snippets-cms/ecommerceStats/module/html-table.html.twig
+++ b/src/EcommerceStatsBundle/Resources/views/snippets-cms/ecommerceStats/module/html-table.html.twig
@@ -6,7 +6,7 @@
     @var int maxGroupCount
 #}
 <div class="TCMSGroupedStatistics">
-    <div class="table-responsive html-table">
+    <div class="table-responsive">
         <table border="1" class="table table-bordered">
             <thead class="thead-dark">
             <tr>
